Initialized API for get cases
