# pkg/api/galasejahtera-service.pb.gw.go
@@ -66,6 +66,24 @@ func local_request_GalaSejahteraService_GetNearbyUsers_0(ctx context.Context, ma
 
 }
 
+func request_GalaSejahteraService_GetKases_0(ctx context.Context, marshaler runtime.Marshaler, client GalaSejahteraServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq empty.Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.GetKases(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_GalaSejahteraService_GetKases_0(ctx context.Context, marshaler runtime.Marshaler, server GalaSejahteraServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq empty.Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.GetKases(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_GalaSejahteraService_CreateFaq_0(ctx context.Context, marshaler runtime.Marshaler, client GalaSejahteraServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq CreateFaqRequest
 	var metadata runtime.ServerMetadata
@@ -1012,6 +1030,26 @@ func RegisterGalaSejahteraServiceHandlerServer(ctx context.Context, mux *runtime
 
 	})
 
+	mux.Handle("GET", pattern_GalaSejahteraService_GetKases_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_GalaSejahteraService_GetKases_0(rctx, inboundMarshaler, server, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_GalaSejahteraService_GetKases_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_GalaSejahteraService_CreateFaq_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1453,6 +1491,26 @@ func RegisterGalaSejahteraServiceHandlerClient(ctx context.Context, mux *runtime
 
 	})
 
+	mux.Handle("GET", pattern_GalaSejahteraService_GetKases_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_GalaSejahteraService_GetKases_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_GalaSejahteraService_GetKases_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_GalaSejahteraService_CreateFaq_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1839,6 +1897,8 @@ func RegisterGalaSejahteraServiceHandlerClient(ctx context.Context, mux *runtime
 var (
 	pattern_GalaSejahteraService_GetNearbyUsers_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "client", "users", "nearby"}, "", runtime.AssumeColonVerbOpt(true)))
 
+	pattern_GalaSejahteraService_GetKases_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "kases"}, "", runtime.AssumeColonVerbOpt(true)))
+
 	pattern_GalaSejahteraService_CreateFaq_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "faqs", "id"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_GalaSejahteraService_GetFaqs_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "faqs"}, "", runtime.AssumeColonVerbOpt(true)))
@@ -1880,6 +1940,8 @@ var (
 
 var (
 	forward_GalaSejahteraService_GetNearbyUsers_0 = runtime.ForwardResponseMessage
+
+	forward_GalaSejahteraService_GetKases_0 = runtime.ForwardResponseMessage
 
 	forward_GalaSejahteraService_CreateFaq_0 = runtime.ForwardResponseMessage
 
